<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DaySettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTextView"
        tools:text="01/09/2020"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="28sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_editor_top_text_placeholder"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_day_free"
            android:text="@string/free_day"
            android:padding="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/holo_green_light"
            android:tag="1"
            android:onClick="stateButtonsHandler" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_day_pay"
            android:text="@string/pay_day"
            android:padding="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/holo_red_light"
            android:tag="2"
            android:onClick="stateButtonsHandler" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_day_work"
            android:text="@string/work_day"
            android:padding="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/holo_blue_light"
            android:tag="3"
            android:onClick="stateButtonsHandler" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/notes" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note"
        android:padding="7dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:hint="@string/note_hint"
        android:autofillHints="Wpisz tu swoje notatki"
        android:inputType="textAutoComplete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:text="@string/save"
            android:onClick="exitButtonsHandler" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:onClick="exitButtonsHandler" />

    </LinearLayout>

</LinearLayout>